--- a/css/style.css
+++ b/css/style.css
@@ -1,693 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&family=Slabo+27px&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 2 | @import "base/extends";
+ *   |         ^^^^^^^^^^^^^^
+ *   '
+ *   scss/style.scss 2:9  root stylesheet */
 
-body {
-  font-family: "roboto";
-  font-weight: 300;
-  text-align: justify;
-  background-color: rgba(247, 244, 239, 0.904);
-  font-size: 16px;
-}
-
-.btn.nos, .btn {
-  background-color: rgb(148, 138, 138);
-  border-radius: 5%;
-  color: white;
-  border: none;
-  transition: all 1s;
-}
-.btn:hover {
-  background-color: #747c58;
-  color: rgb(243, 243, 225);
-  transform: scale(1.1);
-}
-.btn.nos a, .btn a {
-  text-decoration: none;
-  color: white;
-}
-
-footer .foot .redes .redes_iconos {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* --------------------------------- header --------------------------------- */
-header {
-  z-index: 10;
-  background-color: #747c58;
-  position: sticky;
-  top: 0;
-}
-header .barra {
-  max-width: 72em;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-}
-header .barra .logo {
-  display: flex;
-}
-header .barra .logo .logo-img {
-  width: 70px;
-  border-radius: 20%;
-  padding: 0.5em;
-}
-header .barra .logo h1 {
-  color: rgb(219, 206, 161);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1.8em;
-  font-weight: unset;
-  align-self: center;
-}
-header .barra .redes_head {
-  display: flex;
-  align-items: center;
-}
-header .barra .redes_head .redes_head1 {
-  display: flex;
-  padding: 0em 0.5em;
-  width: 3.125em;
-}
-header .barra .redes_head .redes_head1 img {
-  width: 2.5em;
-}
-@media screen and (max-width: 576px) {
-  header {
-    font-size: 12px;
-  }
-}
-
-/* ------------------------------- fin header ------------------------------- */
-/* ------------------------------- inicio nav ------------------------------- */
-.navbar {
-  background-color: #747c58;
-  box-shadow: 0 0 5px 0 rgb(156, 151, 151);
-  border-top: 0.5px solid rgb(243, 243, 225);
-  z-index: 10;
-  position: sticky;
-  top: 4.5rem;
-  padding: 0px;
-}
-
-.button-nav {
-  background-color: rgb(243, 243, 225);
-  color: gray;
-}
-
-.navbar-collapse {
-  justify-content: center;
-}
-
-.navbar-nav li:hover ul {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 2 \2502  @import \"base/extends\";\a   \2502          ^^^^^^^^^^^^^^\a   \2575 \a   scss/style.scss 2:9  root stylesheet";
 }
-
-.navbar-light {
-  color: rgb(243, 243, 225) !important;
-}
-
-.nav-link {
-  color: rgb(243, 243, 225) !important;
-  font-size: 1.2rem;
-  --clippy: polygon(0 0, 0 0, 0 98%, 0% 100%);
-}
-
-.nav-link::after {
-  content: "";
-  display: block;
-  background-color: white;
-  width: 90%;
-  margin-top: 3px;
-  height: 3px;
-  clip-path: var(--clippy);
-  transition: clip-path 0.5s;
-}
-
-.nav-link:hover {
-  color: rgb(37, 36, 36);
-  --clippy: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-}
-
-.dropdown-menu {
-  background-color: #747c58;
-}
-
-.dropdown-item {
-  color: rgb(243, 243, 225);
-}
-
-.navbar-toggler {
-  margin: 0.25rem;
-}
-
-/* ------------------------------- fin nav ------------------------------- */
-/* ------------------------------ inicio footer ----------------------------- */
-footer {
-  background-color: rgba(163, 165, 158, 0.4666666667);
-}
-footer .foot {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1140px;
-  margin: auto;
-}
-footer .foot .botonera_f {
-  margin: 0em 0.5em;
-}
-footer .foot .botonera_f .botonera_f_tit {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  padding: 0.4em;
-  font-size: 1.2em;
-  border-bottom: 1px solid black;
-}
-footer .foot .botonera_f ul li {
-  text-decoration: none;
-  list-style: none;
-  text-align: flex-start;
-  padding: 0.2em;
-}
-footer .foot .botonera_f ul li a {
-  text-decoration: none;
-  color: black;
-}
-@media screen and (max-width: 576px) {
-  footer .foot .botonera_f {
-    display: none;
-  }
-}
-footer .foot .redes {
-  display: flex;
-  flex-direction: column;
-  margin: 0em 0.5em;
-}
-footer .foot .redes .redes_tit {
-  margin-top: 0.5rem;
-  padding: 0.4em;
-  font-size: 1.2em;
-  text-align: center;
-  border-bottom: 1px solid black;
-}
-footer .foot .redes .redes_iconos {
-  padding-top: 2rem;
-}
-footer .foot .redes .redes_iconos .redes_link1 {
-  padding: 0.5em;
-  margin-bottom: 2.5em;
-}
-footer .foot .redes .redes_iconos .redes_link1 .redes-img {
-  width: 3.12em;
-}
-footer .foot .redes .redes_iconos .redes_link2 {
-  padding: 0.5em;
-  margin-bottom: 2.5em;
-}
-footer .foot .redes .redes_iconos .redes_link2 .redes-img {
-  width: 3.12em;
-}
-footer .foot .redes .logo-f .logo-tit-f {
-  font-size: 1.8em;
-  color: gray;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: unset;
-  align-self: center;
-}
-footer .foot .foot_contacto {
-  display: flex;
-  flex-direction: column;
-  text-align: start;
-  margin: 0em 0.5em;
-}
-footer .foot .foot_contacto .foot_contacto_tit {
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
-  padding: 0.4rem;
-  font-size: 1.2em;
-  text-align: center;
-  border-bottom: 1px solid black;
-}
-footer .foot .foot_contacto div .foot_contacto_iconos {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-}
-footer .foot .foot_contacto div .foot_contacto_iconos .icono {
-  width: 30px;
-}
-footer .foot .foot_contacto div .foot_contacto_iconos h5 {
-  text-align: center;
-  font-size: 1em;
-  font-weight: lighter;
-  padding: 0.6rem;
-}
-@media screen and (max-width: 1140px) {
-  footer .foot {
-    max-width: 700px;
-    margin: auto;
-  }
-}
-@media screen and (max-width: 576px) {
-  footer {
-    font-size: 12px;
-  }
-}
-
-/* ------------------------------- fin footer ------------------------------- */
-/* ---------------------------------- cuerpo home ---------------------------------- */
-.text-carousel {
-  font-size: 2.5rem;
-  font-family: "Open Sans", sans-serif;
-  color: white;
-}
-
-.container {
-  max-width: 72em;
-  margin: auto;
-}
-
-.cont-card {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.card-home {
-  box-shadow: 0 0 30px 0 rgb(90, 88, 88);
-}
-
-@media screen and (max-width: 576px) {
-  .row {
-    max-width: 400px;
-    margin: auto;
-  }
-}
-.card-img-top {
-  transition: all 1s;
-}
-
-.card-img-top:hover {
-  transform: scale(0.9);
-}
-
-.img_nosotras {
-  width: 100%;
-  padding: 3em;
-}
-
-.home-nosotras {
-  padding: 2rem;
-  text-align: center;
-}
-
-.btn.nos {
-  display: flex;
-  justify-content: center;
-  padding: 0.6rem 0.8rem;
-  margin: 1rem 4rem;
-}
-
-/* ----------------------------- fin cuerpo home ---------------------------- */
-/* -------------------------------- nosotras -------------------------------- */
-.nos_portada {
-  display: grid;
-  background-image: url(../../img/fondo-nos.png);
-  background-size: contain;
-  max-width: 72rem;
-  margin: auto;
-}
-
-.nos_portada_art {
-  justify-self: center;
-  width: 80%;
-  margin: 1rem 1rem 5rem 1rem;
-}
-
-@media screen and (max-width: 990px) {
-  .nos_portada_art {
-    width: 70%;
-    font-size: 14px;
-  }
-
-  .nos_main_art {
-    justify-items: center;
-  }
-}
-@media screen and (max-width: 770px) {
-  .nos_portada_art {
-    width: 80%;
-    font-size: 12px;
-  }
-
-  body {
-    font-size: 14px;
-  }
-}
-.nos_portada p {
-  text-align: center;
-  font-size: 1.2em;
-}
-
-.card-nos {
-  position: relative;
-  bottom: 4rem;
-}
-
-.nos_main_img {
-  width: 80%;
-  padding: 1rem;
-  margin: 0rem 2rem 2rem 2rem;
-  border-radius: 2%;
-  position: relative;
-  top: 5rem;
-}
-
-.nos_main_art {
-  width: 90%;
-  padding: 4rem 2rem 1rem 2rem;
-  margin: 0.5;
-  border: 2px solid gray;
-}
-
-/* ------------------------------ fin nosotras ------------------------------ */
-/* -------------------------------- Productos ------------------------------- */
-.tit {
-  max-width: 1140px;
-  margin: auto;
-}
-
-h3 {
-  font-size: 1.5rem;
-  text-decoration-line: underline;
-}
-
-#sahumerios {
-  margin-top: 2rem;
-}
-
-#sahumos {
-  margin-top: 2rem;
-}
-
-#velas {
-  margin-top: 2rem;
-}
-
-.item_img {
-  width: 18rem;
-  padding: 0.5rem 0.5rem;
-}
-
-/* ------------------------------ fin productos ----------------------------- */
-/* --------------------------------- mayorista -------------------------------- */
-.mayor_tit {
-  display: grid;
-  justify-items: center;
-  width: 70%;
-  margin: auto;
-}
-
-.container_mayor {
-  margin: 2rem 10rem;
-  align-items: center;
-}
-
-.item_mayor {
-  width: 15rem;
-  padding-left: 1.4rem;
-}
-
-.container_mayor a {
-  background-color: rgb(116, 116, 116);
-  color: white;
-  padding: 1rem;
-}
-
-.container-img {
-  width: 100%;
-  max-width: 1140px;
-  margin: auto;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 250px;
-  grid-gap: 20px;
-}
-
-.container-img .box-img figure {
-  width: 100%;
-  height: 100%;
-}
-
-.container-img .box-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.evento-descripcion {
-  background-color: #f7f4eb;
-  border: 2px solid #747c58;
-  border-radius: 2%;
-  color: rgb(63, 44, 8);
-  text-align: center;
-  font-size: 1.2rem;
-  align-items: center;
-}
-.evento-descripcion figure {
-  margin-top: 2rem;
-}
-
-.container-img .box-img:nth-child(1) {
-  grid-column-start: span 2;
-}
-
-.container-img .box-img:nth-child(4) {
-  grid-row-start: span 2;
-}
-
-@media screen and (max-width: 770px) {
-  .container-img {
-    width: 95%;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-    grid-template-rows: 200px;
-  }
-
-  .container-img .box-img:nth-child(1) {
-    grid-column-start: span 1;
-  }
-}
-@media screen and (max-width: 570px) {
-  .container-img {
-    width: 90%;
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .container-img .box-img img {
-    height: 200px;
-  }
-}
-/* ------------------------------- fin mayorista ------------------------------- */
-/* --------------------------------- + Info --------------------------------- */
-h2 {
-  font-family: "Slabo 27px", serif;
-  font-size: 2.5em;
-  font-weight: 500;
-  text-align: center;
-  padding: 1em 0em;
-  border-bottom: 1px solid gray;
-}
-
-h4 {
-  margin-bottom: 0.8rem;
-  margin-top: 1.5rem;
-}
-
-.info1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.info2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  background-color: white;
-  margin-bottom: 2rem;
-}
-
-video {
-  width: 70%;
-  height: auto;
-  justify-self: center;
-}
-
-.main_art_video {
-  width: 100%;
-  justify-self: start;
-}
-
-.main_art_tit {
-  margin-bottom: 2rem;
-}
-
-.info1 img {
-  width: 65%;
-  height: auto;
-  border-radius: 1.5%;
-  box-shadow: 10px 5px 5px rgba(173, 140, 77, 0.589);
-  justify-self: center;
-}
-
-.info2 img {
-  padding: 1rem;
-  width: 75%;
-  height: auto;
-  justify-self: center;
-}
-
-.main_art {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  justify-self: center;
-  align-self: center;
-}
-
-/* ------------------------------ Fin + Info ----------------------------- */
-/* -------------------------------- contacto -------------------------------- */
-.contacto-tit {
-  font-size: 1.5rem;
-  text-align: center;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid gray;
-  margin-bottom: 1rem;
-}
-
-.item_contacto {
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 2em;
-}
-.item_contacto img {
-  margin-right: 0.5em;
-}
-
-.item_redes {
-  display: flex;
-  justify-content: center;
-  padding: 0.4rem;
-}
-.item_redes img {
-  width: 15%;
-  height: auto;
-}
-.item_redes a {
-  align-items: center;
-  padding: 0.4rem;
-  text-decoration: none;
-  color: black;
-}
-
-.r-instagram:hover {
-  color: rgba(208, 34, 214, 0.973);
-}
-
-.r-facebook:hover {
-  color: rgba(33, 108, 221, 0.973);
-}
-
-.mapa {
-  width: 100%;
-  height: auto;
-}
-
-/* form  */
-.form-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: rgb(226, 225, 225);
-}
-
-.form-tit {
-  text-align: center;
-  border-color: 1px solid rgb(228, 223, 223);
-  border-radius: 3px;
-  margin: 0.5rem 0;
-  padding: 0.4rem;
-}
-
-.contacto-form {
-  border: 1px solid rgb(228, 223, 223);
-  border-radius: 3px;
-  width: 80%;
-  margin: 0 0 1.5rem 0;
-}
-
-.form-row {
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
-.form-row label {
-  margin-bottom: 10px;
-}
-
-.form-row input[type=text],
-.form-row input[type=email],
-.form-row input[type=number] {
-  background-color: white;
-  border: 1px solid rgb(163, 163, 167);
-  border-radius: 3px;
-  width: 100%;
-  padding: 8px;
-}
-
-.form-row textarea {
-  background-color: white;
-  border: 1px solid rgb(163, 163, 167);
-  border-radius: 3px;
-  margin-bottom: 10px;
-  padding: 7px;
-  min-height: 100px;
-  min-width: 100%;
-  resize: none;
-}
-
-.form-row .instructions {
-  color: rgb(109, 107, 107);
-  margin-bottom: 20px;
-}
-
-.form-row button {
-  font-weight: bold;
-  color: white;
-  background-color: rgb(100, 157, 204);
-  border: none;
-  border-radius: 3px;
-  padding: 10px 30px;
-  cursor: pointer;
-}
-
-.form-row button:hover {
-  background-color: rgb(131, 171, 243);
-}
-
-.form-row button:active {
-  background-color: rgb(76, 132, 238);
-}
-
-/*# sourceMappingURL=style.css.map */
