--- a/scss/componentes/_+info.scss
+++ b/scss/componentes/_+info.scss
@@ -1,66 +1,63 @@
 /* --------------------------------- + Info --------------------------------- */
+.body-info {
+  margin-bottom: 5em
+}
 
+h2 {
+  font-family: "Slabo 27px", serif;
+  font-size: 2.5em;
+  font-weight: 500;
+  text-align: center;
+  padding: 1em 0em;
+  border-bottom: 1px solid gray;
+}
 
-  h2 {
-    font-family: "Slabo 27px", serif;
-    font-size: 2.5em;
-    font-weight: 500;
-    text-align: center;
-    padding: 1em 0em;
-    border-bottom: 1px solid gray;
+h4 {
+  margin-bottom: 0.8rem;
+  margin-top: 1.5rem;
+}
+
+.text-acordeon {
+  font-size: 0.8em;
+  background-color: lighten(nth($colores, 1), 45%);
+
+  &:not(.collapsed) {
+    color: nth($colores, 2);
+    background-color: nth($colores, 1);
   }
-  
-  h4 {
-    margin-bottom: 0.8rem;
-    margin-top: 1.5rem;
+
+  &:not(.collapsed)::after {
+    color: nth($colores, 2);
+    background-color: nth($colores, 1);
   }
-  
-  .info1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-  
-  .info2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    background-color: white;
-    margin-bottom: 2rem;
-  }
-  
+
+}
+
+.info1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-size: 1rem;
+  line-height: 1.5rem;
+
   video {
-    width: 70%;
-    height: auto;
-    justify-self: center
-  }
-  
+    width: 90%;
+    justify-self: center;
+    object-fit: cover;
+    height: 100%;
+    @media screen and (max-width: 990px) { 
+      width: 70%;
+  }}
+
   .main_art_video {
     width: 100%;
     justify-self: start;
+
+
+    .main_art_tit {
+      margin-bottom: 2rem;
+    }
   }
-  
-  .main_art_tit {
-    margin-bottom: 2rem;
-  }
-  
-  .info1 img {
-    width: 65%;
-    height: auto;
-    border-radius: 1.5%;
-    box-shadow: 10px 5px 5px rgba(173, 140, 77, 0.589);
-    justify-self: center;
-  }
-  
-  .info2 img {
-    padding: 1rem;
-    width: 75%;
-    height: auto;
-    justify-self: center;
-  }
-  
+
   .main_art {
     width: 90%;
     display: flex;
@@ -68,6 +65,30 @@
     justify-self: center;
     align-self: center;
   }
-  
-  
-  /* ------------------------------ Fin + Info ----------------------------- */
+
+  img {
+    width: 70%;
+    border-radius: 1.5%;
+    box-shadow: 10px 5px 5px rgba(173, 140, 77, 0.589);
+    justify-self: center;
+    object-fit: cover;
+    height: 100%;
+    @media screen and (max-width: 990px) { 
+      width: 70%;
+    }
+  }
+  @media screen and (max-width: 990px) { 
+    grid-template-columns: 1fr;
+    font-size: 1rem;
+    line-height: 1.5rem; }
+}
+
+.img-fluid {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+
+
+/* ------------------------------ Fin + Info ----------------------------- */
