--- a/scss/componentes/_mayorista.scss
+++ b/scss/componentes/_mayorista.scss
@@ -7,22 +7,6 @@
   margin: auto;
 }
 
-.container_mayor {
-  margin: 2rem 10rem;
-  align-items: center;
-}
-
-.item_mayor {
-  width: 15rem;
-  padding-left: 1.4rem;
-}
-
-.container_mayor a {
-  background-color: rgb(116, 116, 116);
-  color: white;
-  padding: 1rem;
-}
-
 .container-img {
   width: 100%;
   max-width: 1140px;
@@ -33,63 +17,68 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 250px;
   grid-gap: 20px;
-}
 
-.container-img .box-img figure {
-  width: 100%;
-  height: 100%;
-}
+  .evento-descripcion {
+    background-color: lighten(nth($colores, 3), 20%);
+    border: 2px solid nth($colores, 1);
+    border-radius: 2%;
+    color: rgb(63, 44, 8);
+    text-align: center;
+    font-size: 1.2em;
+    align-items: center;
 
-.container-img .box-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+    figure {
+      margin-top: 2rem;
 
-.evento-descripcion {
-  background-color: lighten(nth($colores, 3),20%);
-  border: 2px solid nth($colores,1);
-  border-radius: 2%;
-  color: rgb(63, 44, 8);
-  text-align: center;
-  font-size: 1.2em;
-  align-items: center;
+      .btn {
+        @extend %boton;
 
- figure {
-   margin-top: 2rem;
-   a {font-size: 1em;}
+        a {
+          font-size: 1em;
+        }
+      }
+    }
   }
-}
 
-.container-img .box-img:nth-child(1) {
-  grid-column-start: span 2;
-}
+  .box-img {
+    &:nth-child(1) {
+      grid-column-start: span 2;
 
-.container-img .box-img:nth-child(4) {
-  grid-row-start: span 2;
-}
+      @media screen and (max-width: 770px) {
+        grid-column-start: span 1;
+      }
+    }
 
-@media screen and (max-width: 770px) {
-  .container-img {
+    &:nth-child(4) {
+      grid-row-start: span 2;
+    }
+
+    figure {
+      width: 100%;
+      height: 100%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+        @media screen and (max-width: 570px) {
+          height: 200px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 770px) {
     width: 95%;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
     grid-template-rows: 200px;
   }
 
-  .container-img .box-img:nth-child(1) {
-    grid-column-start: span 1;
-  }
-}
-
-@media screen and (max-width: 570px) {
-  .container-img {
+  @media screen and (max-width: 570px) {
     width: 90%;
     grid-template-columns: repeat(1, 1fr);
-  }
-
-  .container-img .box-img img {
-    height: 200px;
   }
 }
 
