--- a/scss/componentes/_+info.scss
+++ b/scss/componentes/_+info.scss
@@ -1,16 +1,20 @@
 /* --------------------------------- + Info --------------------------------- */
 
 .body-info {
-  margin-bottom: 5em;
-
+  max-width: 72em;
+  margin: auto;
+ 
   h2 {
     font-family: "Slabo 27px", serif;
     font-size: 2.5em;
     font-weight: 500;
     text-align: center;
-    padding: 1em 0em;
+    padding: 0.5em 0em;
     border-bottom: 1px solid gray;
+    margin: 1em 6em
   }
+  
+  .container { margin-bottom: 3em;
 
   .text-acordeon {
     font-size: 0.8em;
@@ -87,6 +91,7 @@
     height: 100%;
     width: 100%;
   }
+}
 }
 
 /* ------------------------------ Fin + Info ----------------------------- */
