--- a/scss/componentes/_home.scss
+++ b/scss/componentes/_home.scss
@@ -73,6 +73,15 @@
   padding: 2rem;
   text-align: center;
 
+  h2 {
+    font-family: "Slabo 27px", serif;
+    font-size: 2.5em;
+    font-weight: 500;
+    text-align: center;
+    padding: 0.5em 0em;
+    border-bottom: 1px solid gray;
+    margin-top: 1em }
+
   .btn.nos {
     @extend %boton;
     display: flex;
