--- a/scss/componentes/_mayorista.scss
+++ b/scss/componentes/_mayorista.scss
@@ -5,6 +5,16 @@
   justify-items: center;
   width: 70%;
   margin: auto;
+
+  h2 {
+    font-family: "Slabo 27px", serif;
+    font-size: 2.5em;
+    font-weight: 500;
+    text-align: center;
+    padding: 0.5em 0em;
+    border-bottom: 1px solid gray;
+    margin: 1em 0em
+  }
 }
 
 .container-img {
