--- a/scss/componentes/_nosotras.scss
+++ b/scss/componentes/_nosotras.scss
@@ -1,4 +1,5 @@
 /* -------------------------------- nosotras -------------------------------- */
+
 .nos_portada {
   display: grid;
   background-image: url(../../img/fondo-nos.png);
@@ -10,6 +11,16 @@
     justify-self: center;
     width: 80%;
     margin: 1rem 1rem 5rem 1rem;
+
+    h2 {
+      font-family: "Slabo 27px", serif;
+      font-size: 2.5em;
+      font-weight: 500;
+      text-align: center;
+      padding: 0.5em 0em;
+      border-bottom: 1px solid gray;
+      margin: 1em 3em
+     }
 
     p {
       text-align: center;
